cluster/apps/glance/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: core
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: glance
          image: docker.io/glanceapp/glance@sha256:ab7ddd51269063b7ec5031e888cccf0f8381fba3245ff5e94f1deb155ca0775d
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
          volumeMounts:
            - name: config
              mountPath: /app/config
              readOnly: true
            - name: assets
              mountPath: /app/assets
      volumes:
        - name: config
          configMap:
            name: glance
        - name: assets
          persistentVolumeClaim:
            claimName: glance-assets
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: core
spec:
  selector:
    app: glance
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: core
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.nairdev.com
      secretName: home-nairdev-tls
  rules:
    - host: home.nairdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  name: http
